# remote-autosplitter

./: Cargo.toml  README.md
src/: autosplitter.rs  client.rs  main.rs  message.rs  profile.rs  ui-iced.rs  ui-old.rs  ui.rs
src/remote/: autosplitter.rs  client.rs  message.rs  mod.rs
